--- a/src/components/content-components/left-panel-components/recently-viewed.css
+++ b/src/components/content-components/left-panel-components/recently-viewed.css
@@ -1,14 +1,14 @@
 .recently-viewed {
   flex: 1;
   border-radius: 7px;
-  border: 1px #3c3c3c solid;
-  color: #bbbbbb;
-  background-color: #252525;
+  border: 1px var(--tinted-background) solid;
+  color: var(--tinted-foreground);
+  background-color: var(--background);
   padding: 15px;
 }
 
 .recently-viewed-large {
-  color: #898989;
+  color: var(--muted-foreground);
   font-size: 1.35em;
   font-weight: 300;
   margin: 9px 3px 5px 3px;
@@ -20,8 +20,8 @@
 .recently-viewed-medium {
   flex: 1;
   padding: 6px 2px 6px 2px;
-  color: #d9d9d9;
-  background-color: #252525;
+  color: var(--foreground);
+  background-color: var(--background);
   border-radius: 4px;
   font-size: 1.2em;
 
