--- a/src/components/content-components/center-panel-components/search-results.css
+++ b/src/components/content-components/center-panel-components/search-results.css
@@ -62,9 +62,7 @@
   border-top: 1px solid var(--tinted-background);
   color: var(--foreground);
   border-radius: 0px;
-  padding: 9px 6px 6px 6px;
-  margin-bottom: 2px;
-  margin-top: 2px;
+  padding: 10px 6px 10px 6px;
   cursor: pointer;
   font-style: italic;
   gap: 8px;
@@ -82,7 +80,9 @@
   font-size: 12px;
 }
 .results {
-  margin: 0px 0px 2px 0px;
+  margin: 2px 0px 3px 0px;
+  border-radius: 0 0 4px 4px;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
 }
