--- a/src/components/content.css
+++ b/src/components/content.css
@@ -154,7 +154,7 @@
 }
 
 .content-panel-container {
-  margin: 3px 10px 10px 10px;
+  margin: 3px 4px 10px 4px;
   width: 280px !important;
   min-width: 280px !important;
   max-width: 280px !important;
@@ -172,12 +172,18 @@
   min-height: 0;
   box-sizing: border-box;
 }
+.content-panel-container.left {
+  margin-left: 10px;
+}
+.content-panel-container.right {
+  margin-right: 10px;
+}
 
 .content-nopanel-container {
-  width: calc(min(100%, 100vw - 590px));
+  width: 100%;
   border-radius: 7px;
   color: var(--tinted-foreground);
-  padding: 3px;
+  padding: 3px 0px;
   display: flex;
   flex-direction: column;
   /* border: 1px white solid; */
@@ -185,40 +191,6 @@
   min-height: 0;
   box-sizing: border-box;
   overflow: hidden;
-}
-
-.tooltip-text {
-  visibility: hidden;
-  font-family: "Inter", sans-serif;
-  background-color: #333;
-  border: 1px solid #444;
-  color: #fff;
-  font-size: 12px;
-  padding: 4px 8px;
-  border-radius: 4px;
-  position: absolute;
-  bottom: 125%; /* position above the icon */
-  left: 50%;
-  transform: translateX(-50%);
-  white-space: nowrap;
-  opacity: 0 !important;
-  transition: opacity 1s cubic-bezier(1, 0, 0.86, -0.64);
-  z-index: 1;
-  font-weight: 300;
-  box-shadow: 0 3px 9px #00000066;
-  letter-spacing: 0.5px;
-  display: flex;
-  flex-direction: row;
-}
-.tooltip-inner-alt {
-  color: var(--muted-foreground);
-  padding-left: 2px;
-}
-
-.tooltip:hover .tooltip-text {
-  visibility: visible;
-  opacity: 1 !important;
-  z-index: auto !important;
 }
 
 .call-to-action {
