--- a/src/modals/generic-modal.css
+++ b/src/modals/generic-modal.css
@@ -5,7 +5,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.25);
-  border-top: 2px solid #2c2c2c;
+  border-top: 1px solid #2c2c2c;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,7 +16,7 @@
   background-color: var(--alternate-background);
   border: 1px solid var(--tinted-background);
   color: var(--foreground);
-  box-shadow: 0 8px 20px #00000044;
+  box-shadow: 0 15px 50px #111111f4;
   padding: 25px 25px;
   border-radius: 8px;
   position: relative;
@@ -151,7 +151,7 @@
   font: inherit;
   border-radius: 7px;
   border: 1px var(--tinted-background) solid;
-  color: #c2c2c2;
+  color: var(--tinted-foreground);
   background-color: var(--background);
   font-size: 13px;
   letter-spacing: 0.1px;
@@ -178,6 +178,7 @@
   border: none;
   background: none;
   cursor: pointer;
+  display: flex;
 }
 
 .call-to-action-2.red {
