--- a/src/universal-styling/index.css
+++ b/src/universal-styling/index.css
@@ -44,6 +44,7 @@ body,
   --background: #222222;
   --tinted-background: #3c3c3c;
   --alternate-background: #2a2a2a;
+  --alternate-background-transparent: #2a2a2a77;
 
   --foreground: #d9d9d9;
   --muted-foreground: #898989;
